# make_guide

./: README.md
cmake/: CMakeLists.txt
cmake/include/example_dll/: example_dll.h
cmake/include/example_lib/: example_lib.h
cmake/lib/: TODO
cmake/lib/win32_msvc_32/debug/: example_lib_win32_msvc_32_d.lib
cmake/lib/win32_msvc_32/release/: example_lib_win32_msvc_32.lib
cmake/packaging/: TODO
cmake/res/: TODO
cmake/src/example_app/: CMakeLists.txt  main.cpp
cmake/src/example_app/module_a/: module_a.cpp
cmake/src/example_app/module_b/: module_b.h
cmake/src/example_dll/: CMakeLists.txt  example_dll.cpp
cmake/src/example_lib/: CMakeLists.txt  example_lib.cpp
cmake/src/test/: main.cpp
cmake/testing/: CMakeLists.txt
cmake/toolchain/: Rules.cmake  android-9_armeabi-v7a_gcc.cmake  android-9_gcc.cmake  android-9_x86_gcc.cmake  ios_armeabi-v7a_clang.cmake  ios_x86-64_clang.cmake  linux_g++.cmake  linux_x86-64_gcc.cmake  linux_x86_gcc.cmake  macx_x86-64_clang.cmake  macx_x86-64_llvm.cmake  win32_g++.cmake  win32_msvc.cmake  win32_x86-64_gcc.cmake  win32_x86-64_msvc2010.cmake  win32_x86_gcc.cmake
make/: Makefile  build_debug_32.sh  build_debug_64.sh  build_release_32.sh  build_release_64.sh
make/include/example_app/module_a/: module_a.h
make/include/example_dll/: example_dll.h
make/make/: Rules.mak  i386.mak  linux.mak  linux_g++.mak
make/src/example_app/: Makefile  main.cpp
make/src/example_app/module_a/: Makefile  module_a.cpp
make/src/example_app/module_b/: Makefile  module_b.cpp
make/src/example_dll/: Makefile
make/src/example_lib/: Makefile  example_lib.cpp
make/src/test/: Makefile  main.cpp
make/testing/: Makefile  main.cpp
make/toolchain/: Rules.mak  linux_g++.mak  linux_x86-64_gcc.mak  linux_x86_gcc.mak  macx_g++.mak
other/maketest/: Makefile
other/maketest/app_test/: Makefile  app_chz.pc  main.cpp
other/maketest/includes/: bar.h  foo.h
other/maketest/lib_bar/: Makefile  bar.c  bar.pc
other/maketest/lib_foo/: Makefile  foo.c  foo.pc
other/maketest/makefiles/: arm.mk  common.mk  i386.mk  rules.mk
other/qt-helloworld-cmake-template/: CMakeLists.txt  README.md
other/qt-helloworld-cmake-template/src/: CMakeLists.txt  mainwindow.ui
qmake/: qmake.pro
qmake/include/example_dll/: example_dll.h
qmake/include/example_lib/: example_lib.h
qmake/lib/win32_msvc_32/debug/: example_lib_win32_msvc_32_d.lib
qmake/lib/win32_msvc_32/release/: example_lib_win32_msvc_32.lib
qmake/lib/win32_vc10_32/debug/: example_lib_win32_vc10_32_d.lib
qmake/lib/win32_vc10_32/release/: example_lib_win32_vc10_32.lib
qmake/qmake/: Rules.pri  linux_g++.pri  macx_llvm.pri  win32_g++.pri  win32_vc10.pri
qmake/src/example_app/: example_app.pro  main.cpp
qmake/src/example_app/android/: AndroidManifest.xml  gradle.properties  local.properties
qmake/src/example_app/module_a/: module_a.cpp  module_a.h  module_a.pri
qmake/src/example_app/module_b/: module_b.cpp  module_b.h  module_b.pro
qmake/src/example_dll/: example_dll.cpp  example_dll.pro
qmake/src/example_lib/: example_lib.cpp  example_lib.pro
qmake/src/test/: test.pro
qmake/testing/: main.cpp  testing.pro
qmake/testing/android/: AndroidManifest.xml
qmake/toolchain/: Rules.pri  android_armeabi-v7a_gcc.pri  ios_armeabi-v7a_clang.pri  linux_g++.pri  linux_x86_gcc.pri  macx_g++.pri  macx_llvm.pri  macx_x86-64_clang.pri  macx_x86-64_gcc.pri  macx_x86-64_llvm.pri  win32_g++.pri  win32_msvc.pri  win32_x86_gcc.pri  win32_x86_msvc2010.pri
